make sure banner is visible 100%

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     width: 100vw;
     max-width: 100%;
     overflow: hidden;
-    height: auto;   
+       
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,10 +23,9 @@ body {
 
 .hero img {
     width: 100%;
-    max-width: 100vw;
     height: auto;
     display: block;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .hero h1 {
